# pycone

./: .gitignore  .pre-commit-config.yaml  BACKGROUND.md  NOTES.md  README.md  meson.build  notepad.typ  pyproject.toml
.github/workflows/: tests.yml
analysis/: comb_filter.py  cone_filter.py  equations.typ  notepad.typ
analysis/other_analysis/: cone_crop_correlation_matrix.xlsx  correlation_table.csv  make_highest_correlation_table.py  max_correlation_by_site.csv  plot_matrix.py
data/: method_notes.docx  method_notes.md
data/10132023_a/: format_r_output.R  function_calc_timestep_means.R  function_r.R  plot.R  readme
data/10132023_a/output__duration30 onset52 offset1/: exp(dT)__duration30_offset1.csv
data/10132023_a/output__duration30 onset52 offset10/: r_value__duration30_offset10.csv
data/10132023_a/output__duration30 onset52 offset11/: exp(dT)__duration30_offset11.csv  r_value__duration30_offset11.csv
data/10132023_a/output__duration30 onset52 offset16/: r_value__duration30_offset16.csv
data/10132023_a/output__duration30 onset52 offset17/: r_value__duration30_offset17.csv  temp_means__duration30 offset17.csv
data/10132023_a/output__duration30 onset52 offset19/: temp_means__duration30 offset19.csv
data/10132023_a/output__duration30 onset52 offset2/: r_value__duration30_offset2.csv
data/10132023_a/output__duration30 onset52 offset20/: exp(dT)__duration30_offset20.csv  r_value__duration30_offset20.csv  temp_means__duration30 offset20.csv
data/10132023_a/output__duration30 onset52 offset21/: temp_means__duration30 offset21.csv
data/10132023_a/output__duration30 onset52 offset22/: exp(dT)__duration30_offset22.csv
data/10132023_a/output__duration30 onset52 offset27/: exp(dT)__duration30_offset27.csv
data/10132023_a/output__duration30 onset52 offset28/: r_value__duration30_offset28.csv
data/10132023_a/output__duration30 onset52 offset3/: exp(dT)__duration30_offset3.csv
data/10132023_a/output__duration30 onset52 offset4/: r_value__duration30_offset4.csv  temp_means__duration30 offset4.csv
data/10132023_a/output__duration30 onset52 offset7/: r_value__duration30_offset7.csv
data/10132023_a/output__duration30 onset52 offset8/: temp_means__duration30 offset8.csv
data/10132023_a/output__duration30 onset52 offset9/: r_value__duration30_offset9.csv  temp_means__duration30 offset9.csv
data/r_analysis/: .~lock.Cone Crop for Delta-T calculations v.1 2.csv#  .~lock.daily weather data 1981-2014.xlsx#  format_r_output.R  function_calc_timestep_means.R  function_dT.R  function_r.R  main.R  plot.R  readin_data.R
data/r_analysis/output__duration30 onset52 offset0/: exp(dT)__duration30_offset0.csv  r_value__duration30_offset0.csv  temp_means__duration30 offset0.csv
data/r_analysis/output__duration30 onset52 offset10/: exp(dT)__duration30_offset10.csv  temp_means__duration30 offset10.csv
data/r_analysis/output__duration30 onset52 offset11/: temp_means__duration30 offset11.csv
data/raw_data/: cone_crop.xlsx  jalene_compilation_2014_lter.xlsx
pycone/: __init__.py  __main__.py  analysis.py  explorer.py  output.py  preProcess.py  preprocess.py  run.py  stats.py  stats_emcee.py  util.py
pycone/src/: gsl.cpp  pycone.c  pycone.cpp
pycone/stats/: fast_models.pyx  fast_stats_emcee.pxd  fast_stats_emcee.pyx  math.py  meson.build  model.py  stats_emcee.py  stats_pymc.py  transform.py
r_analysis/: Cone Crop for Delta-T calculations v.1 2.csv  function_dT.R  main.R  r_duration30.csv  readin_data.R  readme
r_analysis/output__duration30 onset52 offset1/: r_value__duration30_offset1.csv  temp_means__duration30 offset1.csv
r_analysis/output__duration30 onset52 offset12/: r_value__duration30_offset12.csv  temp_means__duration30 offset12.csv
r_analysis/output__duration30 onset52 offset13/: exp(dT)__duration30_offset13.csv  temp_means__duration30 offset13.csv
r_analysis/output__duration30 onset52 offset14/: exp(dT)__duration30_offset14.csv  r_value__duration30_offset14.csv
r_analysis/output__duration30 onset52 offset15/: r_value__duration30_offset15.csv  temp_means__duration30 offset15.csv
r_analysis/output__duration30 onset52 offset16/: exp(dT)__duration30_offset16.csv  temp_means__duration30 offset16.csv
r_analysis/output__duration30 onset52 offset18/: temp_means__duration30 offset18.csv
r_analysis/output__duration30 onset52 offset2/: exp(dT)__duration30_offset2.csv  temp_means__duration30 offset2.csv
r_analysis/output__duration30 onset52 offset22/: temp_means__duration30 offset22.csv
r_analysis/output__duration30 onset52 offset23/: exp(dT)__duration30_offset23.csv
r_analysis/output__duration30 onset52 offset24/: exp(dT)__duration30_offset24.csv
r_analysis/output__duration30 onset52 offset25/: r_value__duration30_offset25.csv  temp_means__duration30 offset25.csv
r_analysis/output__duration30 onset52 offset26/: exp(dT)__duration30_offset26.csv  r_value__duration30_offset26.csv  temp_means__duration30 offset26.csv
r_analysis/output__duration30 onset52 offset27/: r_value__duration30_offset27.csv  temp_means__duration30 offset27.csv
r_analysis/output__duration30 onset52 offset28/: exp(dT)__duration30_offset28.csv  temp_means__duration30 offset28.csv
r_analysis/output__duration30 onset52 offset29/: exp(dT)__duration30_offset29.csv  temp_means__duration30 offset29.csv
r_analysis/output__duration30 onset52 offset3/: temp_means__duration30 offset3.csv
r_analysis/output__duration30 onset52 offset4/: exp(dT)__duration30_offset4.csv
r_analysis/output__duration30 onset52 offset5/: exp(dT)__duration30_offset5.csv  r_value__duration30_offset5.csv
r_analysis/output__duration30 onset52 offset6/: exp(dT)__duration30_offset6.csv  temp_means__duration30 offset6.csv
r_analysis/output__duration30 onset52 offset7/: exp(dT)__duration30_offset7.csv  temp_means__duration30 offset7.csv
r_analysis/output__duration30 onset52 offset8/: exp(dT)__duration30_offset8.csv  r_value__duration30_offset8.csv
r_analysis/output__duration30 onset52 offset9/: exp(dT)__duration30_offset9.csv
tests/: test_analysis.py  test_preprocess.py  test_util.py
(+21 files in other folders)
