[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "pycone"
dynamic = ["version"]
authors = [
  { name="Peyton Murray", email="peynmurray@gmail.com" },
  { name="Justin Hawkins", email="urbanecoguard@gmail.com" },
  { name="Eli Kallison", email="elirushkallison@gmail.com" },
]
description = "Statistical Analysis for Cone Production"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.6",
    "scipy",
    "matplotlib",
    "pandas",
    "openpyxl",
    "rich"
]

[project.urls]
Homepage = "https://github.com/peytondmurray/pycone"

[tool.setuptools]
packages = ["pycone"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[project.optional-dependencies]
dev = ["pre-commit>=3.6.0", "ruff-lsp", "python-lsp-server", "pytest"]

[tool.setuptools_scm]
