[build-system]
requires = [
    "meson-python",
    "setuptools_scm",
    "numpy",
    "pybind11",
]
build-backend = "mesonpy"

[project]
name = "pycone"
dynamic = ["version"]
authors = [
  { name="Peyton Murray", email="peynmurray@gmail.com" },
  { name="Justin Hawkins", email="urbanecoguard@gmail.com" },
  { name="Eli Kallison", email="elirushkallison@gmail.com" },
]
description = "Statistical Analysis for Cone Production"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.6",
    "scipy",
    "matplotlib",
    "pandas",
    "openpyxl",
    "rich",
    "pyside6",
    "pymc",
]

[project.urls]
Homepage = "https://github.com/peytondmurray/pycone"

[tool.setuptools]
packages = ["pycone"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8 naming
    "N",
    # pydocstyle
    "D",
    # annotations
    "ANN",
    # debugger
    "T10",
    # flake8-pytest
    "PT",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-fixme
    "FIX",
    # flake8-eradicate
    "ERA",
    # pandas-vet
    "PD",
    # numpy-specific rules
    "NPY",
]
ignore = [
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "D211", # No blank line before class
    "D213", # Multiline summary second line
    "PD901", # Avoid using 'df' for pandas dataframes. Perfectly fine in functions with limited scope
    "ANN201", # Missing return type annotation for public function (makes no sense for NoneType return types...)
    "ANN101", # Missing type annotation for `self`
    "ANN204", # Missing return type annotation for special method
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line before after class docstring
    "D204", # 1 blank line required after class docstring
    "D413", # 1 black line after parameters
    "SIM108", # Simplify if/else to one line; not always clearer
    "D206", # Advised to disable by ruff-format
    "E501", # Advised to disable by ruff-format
    "W191", # Advised to disable by ruff-format
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # Unused import
]
"test_*.py" = [
    "ANN001" # Type annotations aren't needed for tests; these are fixtures or parametrizations
]

[project.optional-dependencies]
dev = ["pre-commit>=3.6.0", "ruff-lsp", "python-lsp-server", "pytest", "pytest-cov"]
build = ["setuptools_scm", "meson-python", "pybind11", "build"]
notebook = ["jupyterlab", "ipywidgets"]

[tool.setuptools_scm]

[tool.coverage.run]
omit = ["tests/*"]  # Don't bother measuring test coverage for tests themselves

[tool.isort]
profile = "black"
